Added Green-Blue color scheme

--- a/src/css/shared.css
+++ b/src/css/shared.css
@@ -1,3 +1,12 @@
+			.YB0 { fill:#edf8b1 !important; background-color: #edf8b1; }
+			.YB1 { fill:#c7e9b4 !important; background-color: #c7e9b4;}
+			.YB2 { fill:#7fcdbb !important; background-color: #7fcdbb;}
+			.YB3 { fill:#41b6c4 !important; background-color: #41b6c4;}
+			.YB4 { fill:#1d91c0 !important; background-color: #1d91c0;}
+			.YB5 { fill:#225ea8 !important; background-color: #225ea8;}
+			.YB6 { fill:#253494 !important; background-color: #253494;}
+			.YBNone { fill: none !important;}
+
 			.Q0 { fill: rgb(215,25,28) !important; background-color: rgb(215,25,28);	}
 			.Q1 { fill: rgb(240,124,74) !important;	background-color: rgb(240,124,74); }
 			.Q2 { fill: rgb(253,201,128) !important;	background-color: rgb(253,201,128); }
