--- a/src/css/shared.css
+++ b/src/css/shared.css
@@ -217,10 +217,76 @@
 	max-height:300px;
 	overflow:none;
 }
+.ModalLoadingDiv {
+	max-width:300px;
+	max-height:300px;
+	width: 80px;
+	overflow:none;
+}
 .ModalHeaderDiv {
 	text-align: center;
 	background-color: #DDD;
 	padding: 5px;
 	border-radius: 5px;
 	font-weight: bold;
+}
+.ModalHeaderDivLoading {
+	text-align: center;
+	padding: 5px;
+	border-radius: 5px;
+	font-weight: bold;
+	position: absolute;
+	left: 0px;
+	top: 35px;
+	/*width: 100%;*/
+}
+
+
+.spinner {
+  margin: 10px auto;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  text-align: center;
+
+  -webkit-animation: rotate 2.0s infinite linear;
+  animation: rotate 2.0s infinite linear;
+}
+
+.dot1, .dot2 {
+  width: 60%;
+  height: 60%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  background-color: #333;
+  border-radius: 100%;
+
+  -webkit-animation: bounce 2.0s infinite ease-in-out;
+  animation: bounce 2.0s infinite ease-in-out;
+}
+
+.dot2 {
+  top: auto;
+  bottom: 0px;
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes rotate { 100% { -webkit-transform: rotate(360deg) }}
+@keyframes rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
+
+@-webkit-keyframes bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
